syntax = "proto3";
package StorageMaintainerMessage;

//请求结构
message ReqData {
    string strChannelID = 1;
    string strRelativePath = 2;
    string strMountPoint = 3;
    string strDate = 4;
    string strRecordID = 5;
    int64 nStartTime = 6;
}

//返回结构
message ResData {
    string strChannelID = 1;
    int32 nRespond = 2;   //-1 挂载点不存在  0 操作中  1 删除成功
    string strRecordID = 3;
    string strDate = 4;
    string strMountPoint = 5;
    int64 nStartTime = 6;
}

// 发送消息
service Send {
    rpc SendMsg (ReqData) returns (ResData) {
    }
}